src/test/ui/allocator/two-allocators.stderr
error: cannot define multiple global allocators
  --> $DIR/two-allocators.rs:6:1
   |
LL | static B: System = System;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the previous global allocator is defined here
  --> $DIR/two-allocators.rs:4:1
   |
LL | static A: System = System;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

